--- a/cloud.css
+++ b/cloud.css
@@ -1,27 +1,3 @@
-     
-#map {
-    margin-top: 10px;
-    height: 100%;
-}
-
-html,
-body {
-    height: 82%;
-    margin: 0;
-    padding: 0;
-}
-
-output {
-    display: block;
-    margin-top: 4em;
-    font-family: monospace;
-    font-size: .8em;
-}
-
-.map-icon {
-    height: 10px;
-    width: 10px;
-}
 #header{
     background-color: black;
     width: auto;
@@ -42,7 +18,7 @@ output {
     font-size: 30px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-#merc_date{
+#date{
     width: 15%;
     height: 30px;
     font-family: sans-serif;
@@ -50,23 +26,14 @@ output {
     border-width: 2px;
     border-radius: 10px;
     border-color: black;
-    margin-left: 20%;
-    margin-top: 20px;
 }
-#fire_date{
-    width: 15%;
-    height: 30px;
-    font-family: sans-serif;
-    font-size: large;
-    border-width: 2px;
-    border-radius: 10px;
-    margin-left: 14%;
-    border-color: black;
+#input{
+    padding-top: 15px;
+    text-align: center;
+    height: 80px;
 }
 #go{
     background-color: lightgreen;
-    margin-right: 5%;
-    margin-left: 5%;
     width: 60px;
     height: 35px;
     border: 0ch;
@@ -74,9 +41,7 @@ output {
     font-weight: bold;
     font-size: large;
 }
-#label{
-    font-family: sans-serif;
-    font-weight: bold;
-    margin-left: 335px;
-    font-size: 20px;
+#disp{
+    text-align: center;
+    margin-top: 50px;
 }
