--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ output {
     border-width: 2px;
     border-radius: 10px;
     border-color: black;
-    margin-left: 20%;
+    margin-left: 8%;
     margin-top: 20px;
 }
 #fire_date{
@@ -60,7 +60,17 @@ output {
     font-size: large;
     border-width: 2px;
     border-radius: 10px;
-    margin-left: 14%;
+    margin-left: 5%;
+    border-color: black;
+}
+#aqua_date{
+    width: 15%;
+    height: 30px;
+    font-family: sans-serif;
+    font-size: large;
+    border-width: 2px;
+    border-radius: 10px;
+    margin-left: 5%;
     border-color: black;
 }
 #go{
@@ -77,6 +87,6 @@ output {
 #label{
     font-family: sans-serif;
     font-weight: bold;
-    margin-left: 335px;
+    margin-left: 150px;
     font-size: 20px;
 }
